fix: card sections height on mobile

--- a/src/components/ProjectBoard/styles.scss
+++ b/src/components/ProjectBoard/styles.scss
@@ -127,7 +127,7 @@
   [src*="launch-hartford"] { width: 21.6rem;}
 
   @media (max-aspect-ratio: 1/1) {
-    padding-bottom: 7rem;
+    padding-bottom: 12rem;
 
     &__title {
       font-size: 2.4rem;
